--- a/package.json
+++ b/package.json
@@ -15,9 +15,8 @@
     "cleanup:packages": "lerna clean --yes && lerna exec --parallel -- node ../../bin/cleanup",
     "add-package-files": "lerna exec --no-sort -- node ../../bin/add-package-files",
     "generate-readme": "lerna exec --no-sort -- node ../../bin/generate-readme",
-    "lint": "npm run lint:src && npm run lint:test",
-    "lint:src": "lerna exec --parallel --ignore=\"@testring/@(e2e-test-app)\" -- eslint \"./src/**/*.[tj]s\"",
-    "lint:test": "lerna exec --parallel --no-sort --ignore=\"@testring/@(ui-kit|types)\" -- eslint ./test/**/*.[tj]s",
+    "lint": "lerna exec --parallel --no-sort -- eslint ./**/*.ts",
+    "lint:fix": "lerna exec --parallel --no-sort --no-bail -- eslint --fix ./**/*.ts",
     "test": "lerna exec --ignore=\"@testring/@(ui-kit|types|e2e-test-app)\" -- mocha --opts mocha.opts",
     "test:watch": "lerna exec --ignore=\"@testring/@(ui-kit|types|e2e-test-app)\" --parallel -- mocha --opts mocha.opts --watch",
     "test:e2e": "lerna run --stream --scope @testring/e2e-test-app e2e",
@@ -72,22 +71,26 @@
     ]
   },
   "devDependencies": {
-    "@lerna/batch-packages": "3.13.0",
-    "@lerna/filter-packages": "3.13.0",
-    "@lerna/project": "3.13.1",
-    "@lerna/run-parallel-batches": "3.13.0",
+    "@lerna/batch-packages": "3.16.0",
+    "@lerna/filter-packages": "3.18.0",
+    "@lerna/project": "3.18.0",
+    "@lerna/run-parallel-batches": "3.16.0",
     "@types/chai": "4.1.7",
     "@types/mocha": "5.2.5",
     "@types/node": "12.12.20",
+    "@typescript-eslint/parser": "2.14.0",
     "babel-eslint": "10.0.1",
     "chai": "4.2.0",
     "coveralls": "3.0.2",
-    "eslint": "5.12.0",
-    "eslint-config-ringcentral": "0.3.1",
-    "eslint-plugin-react": "7.9.1",
+    "eslint": "6.8.0",
+    "eslint-config-ringcentral": "3.0.0",
+    "eslint-plugin-import": "2.19.1",
+    "eslint-plugin-react": "7.17.0",
+    "eslint-plugin-ringcentral": "3.0.0",
+    "eslint-plugin-sonarjs": "0.5.0",
     "eslint-plugin-typescript": "0.14.0",
     "glob": "7.1.3",
-    "lerna": "3.13.1",
+    "lerna": "3.20.1",
     "lerna-update-wizard": "0.11.1",
     "mocha": "5.2.0",
     "npm-check": "5.9.0",
@@ -97,7 +100,6 @@
     "rimraf": "2.6.3",
     "sinon": "7.2.2",
     "ts-node": "8.5.4",
-    "typescript": "3.7.3",
-    "typescript-eslint-parser": "22.0.0"
+    "typescript": "3.7.3"
   }
 }
