--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "build:precommit": "npm run check-deps:precommit && npm run build:clear && npm run test && npm run test:e2e-simple",
     "build:ci": "npm run build:clear && npm run test:ci",
     "publish:version": "lerna version --exact",
-    "publish:ci": "lerna publish from-package --yes",
+    "publish:ci": "node ./bin/publish.js",
     "storybook": "lerna run --stream --scope @testring/ui-kit storybook",
     "check-deps": "npm run check-deps:precommit && npm run check-deps:root && npm run check-deps:packages",
     "check-deps:precommit": "lerna exec -- node ../../bin/check-packages-versions",
@@ -71,6 +71,10 @@
     ]
   },
   "devDependencies": {
+    "@lerna/batch-packages": "3.16.0",
+    "@lerna/filter-packages": "3.18.0",
+    "@lerna/project": "3.18.0",
+    "@lerna/run-parallel-batches": "3.16.0",
     "@types/chai": "4.1.7",
     "@types/mocha": "5.2.5",
     "@types/node": "12.12.21",
@@ -90,6 +94,7 @@
     "lerna-update-wizard": "0.17.6",
     "mocha": "5.2.0",
     "npm-check": "5.9.0",
+    "npm-utils": "2.0.3",
     "nyc": "13.1.0",
     "pre-commit": "1.2.2",
     "rimraf": "2.6.3",
