--- a/.travis.yml
+++ b/.travis.yml
@@ -35,9 +35,7 @@ jobs:
       script: npm run build
       deploy:
         provider: script
-        script:
-          - npm config set _auth $NPM_TOKEN
-          - npm run publish:ci
+        script: npm run publish:ci
         skip_cleanup: true
         on:
           tags: true
