--- a/packages/plugin-selenium-driver/package.json
+++ b/packages/plugin-selenium-driver/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@testring/plugin-selenium-driver",
-  "version": "0.5.29",
+  "version": "0.5.28",
   "main": "./dist/index.js",
   "typings": "./src/index.ts",
   "repository": {
@@ -17,12 +17,12 @@
     "@testring/types": "0.5.28",
     "@types/deepmerge": "2.2.0",
     "@types/node": "12.12.21",
-    "@types/puppeteer-core": "^2.0.0",
+    "@types/puppeteer-core": "2.0.0",
     "chromedriver": "*",
     "deepmerge": "2.1.1",
     "selenium-server": "3.141.59",
     "webdriverio": "5.22.3",
-    "v8-to-istanbul": "^4.1.4",
-    "puppeteer-core": "^3.1.0"
+    "v8-to-istanbul": "4.1.4",
+    "puppeteer-core": "3.1.0"
   }
 }
