--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "generate-readme": "lerna exec --no-sort -- node ../../bin/generate-readme",
     "lint": "lerna exec --parallel --no-sort -- eslint ./**/*.ts",
     "lint:fix": "lerna exec --parallel --no-sort --no-bail -- eslint --fix ./**/*.ts",
-    "test": "lerna exec --ignore=\"@testring/@(ui-kit|types|e2e-test-app)\" -- mocha --opts mocha.opts",
-    "test:watch": "lerna exec --ignore=\"@testring/@(ui-kit|types|e2e-test-app)\" --parallel -- mocha --opts mocha.opts --watch",
+    "test": "lerna exec --ignore=\"@testring/@(ui-kit|types|e2e-test-app)\" -- mocha",
+    "test:watch": "lerna exec --ignore=\"@testring/@(ui-kit|types|e2e-test-app)\" --parallel -- mocha --watch",
     "test:e2e": "lerna run --stream --scope @testring/e2e-test-app e2e",
     "test:e2e-simple": "lerna run --stream --scope @testring/e2e-test-app e2e-simple",
     "test:coverage": "nyc npm test",
