--- a/packages/plugin-selenium-driver/package.json
+++ b/packages/plugin-selenium-driver/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@testring/plugin-selenium-driver",
-  "version": "0.0.6",
+  "version": "0.5.28",
   "main": "./dist/index.js",
   "typings": "./src/index.ts",
   "repository": {
@@ -22,7 +22,7 @@
     "deepmerge": "4.2.2",
     "puppeteer-core": "5.2.1",
     "selenium-server": "3.141.59",
-    "webdriverio": "5.22.3",
+    "webdriverio": "5.22.3"
     "v8-to-istanbul": "4.1.4"
   }
 }
