--- a/packages/plugin-selenium-driver/package.json
+++ b/packages/plugin-selenium-driver/package.json
@@ -22,7 +22,7 @@
     "deepmerge": "4.2.2",
     "puppeteer-core": "5.2.1",
     "selenium-server": "3.141.59",
-    "webdriverio": "5.22.3"
+    "webdriverio": "5.22.3",
     "v8-to-istanbul": "4.1.4"
   }
 }
