--- a/packages/plugin-selenium-driver/package.json
+++ b/packages/plugin-selenium-driver/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@testring/plugin-selenium-driver",
-  "version": "0.5.28",
+  "version": "0.5.30",
   "main": "./dist/index.js",
   "typings": "./src/index.ts",
   "repository": {
@@ -10,11 +10,11 @@
   "author": "RingCentral",
   "license": "MIT",
   "dependencies": {
-    "@testring/child-process": "0.5.29",
-    "@testring/devtool-extension": "0.5.29",
-    "@testring/logger": "0.5.29",
-    "@testring/plugin-api": "0.5.29",
-    "@testring/types": "0.5.29",
+    "@testring/child-process": "0.5.30",
+    "@testring/devtool-extension": "0.5.30",
+    "@testring/logger": "0.5.30",
+    "@testring/plugin-api": "0.5.30",
+    "@testring/types": "0.5.30",
     "@types/deepmerge": "2.2.0",
     "@types/node": "14.6.0",
     "@types/puppeteer-core": "2.0.0",
@@ -22,7 +22,7 @@
     "deepmerge": "4.2.2",
     "puppeteer-core": "5.2.1",
     "selenium-server": "3.141.59",
-    "webdriverio": "5.22.3",
-    "v8-to-istanbul": "4.1.4"
+    "v8-to-istanbul": "4.1.4",
+    "webdriverio": "5.22.3"
   }
 }
