--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -21,7 +21,8 @@
     "@testring/test-worker": "0.5.30",
     "@testring/transport": "0.5.30",
     "@testring/types": "0.5.30",
-    "@testring/web-application": "0.5.29",
+    "@testring/web-application": "0.5.30",
+    "@testring/fs-store": "0.5.30",
     "@types/yargs": "15.0.5",
     "yargs": "15.4.1"
   },
