--- a/packages/web-application/package.json
+++ b/packages/web-application/package.json
@@ -17,6 +17,7 @@
     "@testring/transport": "0.5.30",
     "@testring/types": "0.5.30",
     "@testring/utils": "0.5.30",
+    "@testring/fs-store": "0.5.30",
     "chai": "4.2.0"
   },
   "devDependencies": {
