--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test": "lerna exec --ignore=\"@testring/@(ui-kit|types|e2e-test-app)\" -- mocha",
     "test:watch": "lerna exec --ignore=\"@testring/@(ui-kit|types|e2e-test-app)\" --parallel -- mocha --watch",
     "test:e2e": "lerna run --stream --scope @testring/e2e-test-app e2e",
+    "test:e2e-screenshots": "lerna run --stream --scope @testring/e2e-test-app e2e-screenshots",
     "test:e2e-simple": "lerna run --stream --scope @testring/e2e-test-app e2e-simple",
     "test:coverage": "nyc npm test",
     "test:publish": "coveralls < ./coverage/lcov.info && rimraf ./coverage/lcov-report -G",
