--- a/packages/async-assert/package.json
+++ b/packages/async-assert/package.json
@@ -21,7 +21,7 @@
     "url": "https://github.com/ringcentral/testring/issues"
   },
   "dependencies": {
-    "@testring/types": "^0.5.35",
-    "chai": "^4.3.3"
+    "@testring/types": "0.5.35",
+    "chai": "4.3.3"
   }
 }
