--- a/core/fs-store/package.json
+++ b/core/fs-store/package.json
@@ -16,21 +16,17 @@
   "license": "MIT",
   "dependencies": {
     "@testring/cli-config": "0.5.37",
+    "@testring/logger": "0.5.37",
     "@testring/pluggable-module": "0.5.37",
     "@testring/test-utils": "0.5.37",
     "@testring/transport": "0.5.37",
     "@testring/types": "0.5.37",
-    "@testring/utils": "0.5.37",
-    "pino": "6.11.1",
-    "ts-loader": "8.0.2"
+    "@testring/utils": "0.5.37"
   },
   "scripts": {
     "test": "mocha"
   },
   "bugs": {
     "url": "https://github.com/ringcentral/testring/issues"
-  },
-  "devDependencies": {
-    "@types/pino": "6.3.5"
   }
 }
