--- a/package.json
+++ b/package.json
@@ -53,13 +53,15 @@
     "branches": 45,
     "sourceMap": true,
     "include": [
+      "core/*/src/*.ts",
+      "core/*/src/**/*.ts",
       "packages/*/src/*.ts",
       "packages/*/src/**/*.ts"
     ],
     "exclude": [
       "core/*/src/index.ts",
+      "core/types",
       "packages/*/src/index.ts",
-      "packages/types",
       "packages/web-application/src/web-application.ts",
       "packages/web-application/src/web-client.ts",
       "packages/plugin-selenium-driver/src/plugin/index.ts"
@@ -73,6 +75,7 @@
     ]
   },
   "devDependencies": {
+    "@jsdevtools/npm-publish": "1.4.3",
     "@lerna/batch-packages": "3.16.0",
     "@lerna/filter-packages": "3.18.0",
     "@lerna/project": "3.21.0",
@@ -96,12 +99,11 @@
     "lerna-update-wizard": "0.17.8",
     "mocha": "8.2.0",
     "npm-check": "5.9.2",
-    "npm-utils": "2.0.3",
     "nyc": "15.1.0",
     "pre-commit": "1.2.2",
     "rimraf": "3.0.2",
     "sinon": "9.0.3",
-    "ts-node": "8.10.2",
-    "typescript": "3.9.7"
+    "ts-node": "10.1.0",
+    "typescript": "4.3.5"
   }
 }
