--- a/.editorconfig
+++ b/.editorconfig
@@ -1,14 +1,17 @@
 root = true
 
 [*]
-charset = utf-8
-end_of_line = lf
-insert_final_newline = true
-
-[*.{js,ts}]
 indent_style = space
+end_of_line = lf
+charset = utf-8
+trim_trailing_whitespace = true
+insert_final_newline = false
+
+[*.{js,jsx,ts,tsx}]
 indent_size = 4
 
-[*.{json,md}]
-indent_style = space
+[*.{css,sass,scss,yml,json}]
 indent_size = 2
+
+[Makefile]
+indent_style = tab
