--- a/.eslintrc
+++ b/.eslintrc
@@ -1,16 +1,5 @@
 {
-  "extends": "ringcentral",
-  "parserOptions": {
-    "sourceType": "module",
-    "ecmaVersion": 8,
-    "ecmaFeatures": {
-      "experimentalObjectRestSpread": true
-    }
-  },
-  "parser": "@typescript-eslint/parser",
-  "plugins": [
-    "typescript"
-  ],
+  "extends": "ringcentral-typescript",
   "env": {
     "es6": true,
     "node": true
@@ -21,13 +10,6 @@
     }
   },
   "rules": {
-    "typescript/type-annotation-spacing": [2, {
-      "before": false,
-      "after": true,
-      "overrides": {
-        "arrow": { "before": true, "after": true }
-      }
-    }],
     "no-use-before-define": [2, {
       "functions": true,
       "classes": true,
@@ -44,8 +26,6 @@
     "space-before-blocks": [2, "always"],
     "comma-dangle": [2, "always-multiline"],
     "object-curly-spacing": [2, "always"],
-    "typescript/member-delimiter-style": 2,
-    "typescript/no-unused-vars": 2,
     "no-unused-vars": 0,
     "no-undef": 0,
     "no-void": 2,
