--- a/package.json
+++ b/package.json
@@ -38,8 +38,7 @@
     "storybook": "lerna run --stream --scope @testring/ui-kit storybook",
     "check-deps": "npm run check-deps:precommit && npm run check-deps:root && npm run check-deps:packages",
     "check-deps:precommit": "lerna exec -- node ../../bin/check-packages-versions",
-    "check-deps:root": "npm-check -u",
-    "check-deps:packages": "lerna exec --no-bail -- npm-check --no-color --no-emoji --ignore @testring/*",
+    "check-deps:root": "ncu --deep --color",
     "check-deps:update": "lernaupdate",
     "check-deps:dedupe": "lernaupdate -d"
   },
@@ -77,32 +76,27 @@
   "devDependencies": {
     "@jsdevtools/npm-publish": "1.4.3",
     "@lerna/batch-packages": "3.16.0",
-    "@lerna/filter-packages": "3.18.0",
-    "@lerna/project": "3.21.0",
+    "@lerna/filter-packages": "4.0.0",
+    "@lerna/project": "4.0.0",
     "@lerna/run-parallel-batches": "3.16.0",
-    "@types/chai": "4.2.12",
-    "@types/mocha": "8.0.3",
+    "@types/chai": "4.2.21",
+    "@types/mocha": "8.2.3",
     "@types/node": "14.6.0",
-    "@typescript-eslint/parser": "3.9.1",
-    "babel-eslint": "10.1.0",
-    "chai": "4.2.0",
-    "coveralls": "3.1.0",
-    "eslint": "7.7.0",
-    "eslint-config-ringcentral": "4.0.0",
-    "eslint-plugin-import": "2.22.0",
-    "eslint-plugin-react": "7.20.6",
-    "eslint-plugin-ringcentral": "4.0.0",
+    "@typescript-eslint/eslint-plugin": "4.12.0",
+    "chai": "4.3.4",
+    "coveralls": "3.1.1",
+    "eslint": "7.30.0",
+    "eslint-config-ringcentral-typescript": "5.0.0",
     "eslint-plugin-sonarjs": "0.5.0",
-    "eslint-plugin-typescript": "0.14.0",
-    "glob": "7.1.6",
-    "lerna": "3.22.1",
+    "glob": "7.1.7",
+    "lerna": "4.0.0",
     "lerna-update-wizard": "0.17.8",
-    "mocha": "8.2.0",
-    "npm-check": "5.9.2",
+    "mocha": "9.0.2",
+    "npm-check-updates": "11.8.3",
     "nyc": "15.1.0",
     "pre-commit": "1.2.2",
     "rimraf": "3.0.2",
-    "sinon": "9.0.3",
+    "sinon": "11.1.1",
     "ts-node": "10.1.0",
     "typescript": "4.3.5"
   }
