--- a/packages/web-application/package.json
+++ b/packages/web-application/package.json
@@ -18,8 +18,7 @@
     "@testring/pluggable-module": "0.5.37",
     "@testring/transport": "0.5.37",
     "@testring/types": "0.5.37",
-    "@testring/utils": "0.5.37",
-    "chai": "4.3.4"
+    "@testring/utils": "0.5.37"
   },
   "devDependencies": {
     "@testring/child-process": "0.5.37",
