--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "coveralls": "3.1.1",
     "eslint": "7.30.0",
     "eslint-config-ringcentral-typescript": "5.0.0",
+    "eslint-plugin-import": "2.22.1",
     "eslint-plugin-sonarjs": "0.5.0",
     "glob": "7.1.7",
     "lerna": "4.0.0",
