--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "build:devtool": "lerna run --stream --scope @testring/devtool-frontend build",
     "build:extension": "lerna run --stream --scope @testring/devtool-extension build",
     "build:watch": "lerna exec --ignore=\"@testring/@(e2e-test-app|devtool-frontend|devtool-extension|ui-kit)\" --parallel -- tsc --target es2015 --watch --inlineSourceMap",
-    "build:clear": "npm run lint && npm run build",
+    "build:clear": "npm run build && npm run lint",
     "build:precommit": "npm run check-deps:precommit && npm run build:clear && npm run test && npm run test:e2e-simple",
     "build:ci": "npm run build:clear && npm run test:ci",
     "publish:version": "lerna version --exact",
