--- a/core/cli/package.json
+++ b/core/cli/package.json
@@ -24,9 +24,8 @@
     "@testring/types": "0.5.37",
     "@testring/web-application": "0.5.37",
     "@types/node": "14.6.0",
-    "@types/yargs": "15.0.5",
+    "@types/yargs": "15.0.13",
     "yargs": "15.4.1"
   },
-  "devDependencies": {
-  }
+  "devDependencies": {}
 }
