--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,3 +29,9 @@ jobs:
     - run: npm ci
     - run: npm run build
     - run: npm test
+
+    - name: Coveralls
+      uses: coverallsapp/github-action@master
+      with:
+        base-path: '.coverage'
+        github-token: ${{ secrets.GITHUB_TOKEN }}
