--- a/package.json
+++ b/package.json
@@ -20,10 +20,9 @@
     "test": "lerna exec --ignore=\"@testring/@(ui-kit|types|e2e-test-app)\" -- mocha",
     "test:watch": "lerna exec --ignore=\"@testring/@(ui-kit|types|e2e-test-app)\" --parallel -- mocha --watch",
     "test:coverage": "nyc npm test",
-    "test:coverage-publish": "coveralls < ./coverage/lcov.info && rimraf ./.coverage/lcov-report -G",
     "test:e2e": "lerna run --stream --scope @testring/e2e-test-app test",
     "test:e2e-simple": "lerna run --stream --scope @testring/e2e-test-app test:simple",
-    "test:ci": "npm run test:coverage && npm run test:e2e && npm run test:coverage-publish",
+    "test:ci": "npm run test:coverage && npm run test:e2e",
     "build": "npm run build:main && npm run build:devtool && npm run build:extension",
     "build:watch": "lerna exec --ignore=\"@testring/@(e2e-test-app|devtool-frontend|devtool-extension|ui-kit)\" --parallel -- tsc --watch --inlineSourceMap",
     "build:main": "lerna exec --ignore=\"@testring/@(e2e-test-app|devtool-frontend|devtool-extension|ui-kit)\" -- tsc",
@@ -80,7 +79,6 @@
     "@types/mocha": "8.2.3",
     "@types/node": "14.6.0",
     "chai": "4.3.4",
-    "coveralls": "3.1.1",
     "eslint": "7.31.0",
     "eslint-config-ringcentral": "5.0.0",
     "eslint-config-ringcentral-typescript": "5.0.0",
