Coveralls lcov info path

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -33,5 +33,5 @@ jobs:
     - name: Coveralls
       uses: coverallsapp/github-action@master
       with:
-        base-path: '.coverage'
+        path-to-lcov: './.coverage/lcov.info'
         github-token: ${{ secrets.GITHUB_TOKEN }}
