--- a/core/cli/package.json
+++ b/core/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@testring/cli",
-  "version": "0.5.37",
+  "version": "0.5.38",
   "main": "./dist/index.js",
   "types": "./src/index.ts",
   "repository": {
@@ -10,22 +10,21 @@
   "author": "RingCentral",
   "license": "MIT",
   "dependencies": {
-    "@testring/browser-proxy": "0.5.37",
-    "@testring/cli-config": "0.5.37",
-    "@testring/devtool-backend": "0.5.37",
-    "@testring/fs-reader": "0.5.37",
-    "@testring/fs-store": "0.5.37",
-    "@testring/http-api": "0.5.37",
-    "@testring/logger": "0.5.37",
-    "@testring/plugin-api": "0.5.37",
-    "@testring/test-run-controller": "0.5.37",
-    "@testring/test-worker": "0.5.37",
-    "@testring/transport": "0.5.37",
-    "@testring/types": "0.5.37",
-    "@testring/web-application": "0.5.37",
+    "@testring/browser-proxy": "^0.5.38",
+    "@testring/cli-config": "^0.5.38",
+    "@testring/devtool-backend": "^0.5.38",
+    "@testring/fs-reader": "^0.5.38",
+    "@testring/fs-store": "^0.5.38",
+    "@testring/http-api": "^0.5.38",
+    "@testring/logger": "^0.5.38",
+    "@testring/plugin-api": "^0.5.38",
+    "@testring/test-run-controller": "^0.5.38",
+    "@testring/test-worker": "^0.5.38",
+    "@testring/transport": "^0.5.38",
+    "@testring/types": "^0.5.38",
+    "@testring/web-application": "^0.5.38",
     "@types/node": "14.6.0",
     "@types/yargs": "15.0.13",
     "yargs": "15.4.1"
-  },
-  "devDependencies": {}
+  }
 }
