--- a/core/api/package.json
+++ b/core/api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@testring/api",
-  "version": "0.5.37",
+  "version": "0.5.38",
   "main": "./dist/index.js",
   "types": "./src/index.ts",
   "repository": {
@@ -10,12 +10,12 @@
   "author": "RingCentral",
   "license": "MIT",
   "dependencies": {
-    "@testring/async-breakpoints": "0.5.37",
-    "@testring/http-api": "0.5.37",
-    "@testring/logger": "0.5.37",
-    "@testring/transport": "0.5.37",
-    "@testring/types": "0.5.37",
-    "@testring/utils": "0.5.37",
-    "@testring/web-application": "0.5.37"
+    "@testring/async-breakpoints": "^0.5.38",
+    "@testring/http-api": "^0.5.38",
+    "@testring/logger": "^0.5.38",
+    "@testring/transport": "^0.5.38",
+    "@testring/types": "^0.5.38",
+    "@testring/utils": "^0.5.38",
+    "@testring/web-application": "^0.5.38"
   }
 }
