--- a/core/fs-reader/package.json
+++ b/core/fs-reader/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@testring/fs-reader",
-  "version": "0.5.37",
+  "version": "0.5.38",
   "main": "./dist/index.js",
   "types": "./src/index.ts",
   "repository": {
@@ -10,9 +10,9 @@
   "author": "RingCentral",
   "license": "MIT",
   "dependencies": {
-    "@testring/logger": "0.5.37",
-    "@testring/pluggable-module": "0.5.37",
-    "@testring/types": "0.5.37",
+    "@testring/logger": "^0.5.38",
+    "@testring/pluggable-module": "^0.5.38",
+    "@testring/types": "^0.5.38",
     "glob": "7.1.7"
   }
 }
