--- a/core/plugin-api/package.json
+++ b/core/plugin-api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@testring/plugin-api",
-  "version": "0.5.37",
+  "version": "0.5.38",
   "main": "./dist/index.js",
   "types": "./src/index.ts",
   "repository": {
@@ -10,10 +10,10 @@
   "author": "RingCentral",
   "license": "MIT",
   "dependencies": {
-    "@testring/fs-store": "0.5.37",
-    "@testring/logger": "0.5.37",
-    "@testring/types": "0.5.37",
-    "@testring/utils": "0.5.37",
+    "@testring/fs-store": "^0.5.38",
+    "@testring/logger": "^0.5.38",
+    "@testring/types": "^0.5.38",
+    "@testring/utils": "^0.5.38",
     "@types/node": "14.6.0"
   }
 }
