--- a/packages/browser-proxy/package.json
+++ b/packages/browser-proxy/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@testring/browser-proxy",
-  "version": "0.5.37",
+  "version": "0.5.38",
   "main": "./dist/index.js",
   "types": "./src/index.ts",
   "repository": {
@@ -10,16 +10,16 @@
   "author": "RingCentral",
   "license": "MIT",
   "dependencies": {
-    "@testring/child-process": "0.5.37",
-    "@testring/logger": "0.5.37",
-    "@testring/pluggable-module": "0.5.37",
-    "@testring/transport": "0.5.37",
-    "@testring/types": "0.5.37",
-    "@testring/utils": "0.5.37",
+    "@testring/child-process": "^0.5.38",
+    "@testring/logger": "^0.5.38",
+    "@testring/pluggable-module": "^0.5.38",
+    "@testring/transport": "^0.5.38",
+    "@testring/types": "^0.5.38",
+    "@testring/utils": "^0.5.38",
     "@types/yargs": "15.0.13",
     "yargs": "15.4.1"
   },
   "devDependencies": {
-    "@testring/test-utils": "0.5.37"
+    "@testring/test-utils": "^0.5.38"
   }
 }
