--- a/packages/plugin-selenium-driver/package.json
+++ b/packages/plugin-selenium-driver/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@testring/plugin-selenium-driver",
-  "version": "0.5.37",
+  "version": "0.5.38",
   "main": "./dist/index.js",
   "typings": "./src/index.ts",
   "repository": {
@@ -10,11 +10,11 @@
   "author": "RingCentral",
   "license": "MIT",
   "dependencies": {
-    "@testring/child-process": "0.5.37",
-    "@testring/devtool-extension": "0.5.37",
-    "@testring/logger": "0.5.37",
-    "@testring/plugin-api": "0.5.37",
-    "@testring/types": "0.5.37",
+    "@testring/child-process": "^0.5.38",
+    "@testring/devtool-extension": "^0.5.38",
+    "@testring/logger": "^0.5.38",
+    "@testring/plugin-api": "^0.5.38",
+    "@testring/types": "^0.5.38",
     "@types/deepmerge": "2.2.0",
     "@types/node": "14.6.0",
     "chromedriver": "*",
