--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,10 +1,9 @@
 name: publish
 on:
   # When Release Pull Request is merged
-  pull_request:
+  push:
     branches:
       - master
-    types: [closed]
 
 permissions:
   contents: write # for checkout and tag
