--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,9 +1,10 @@
 name: publish
 on:
   # When Release Pull Request is merged
-  push:
+  pull_request:
     branches:
       - master
+    types: [closed]
 
 permissions:
   contents: write # for checkout and tag
@@ -29,6 +30,19 @@ jobs:
       - run: npm ci
       - run: npm run build
       - run: npm run test:ci
+      - name: Analyze with SonarCloud
+        uses: sonarsource/sonarcloud-github-action@master
+          args: >
+            -Dsonar.verbose=true
+            -Dsonar.exclusions=**/node_modules/**
+            -Dsonar.test.inclusions=packages/**/*.spec.ts
+            -Dsonar.typescript.lcov.reportPaths=coverage/lcov.info
+            -Dsonar.typescript.tsconfigPath=tsconfig.json
+      # Send coverage report to Coveralls
+      #- name: Coveralls
+      #  uses: coverallsapp/github-action@master
+      #  with:
+      #    github-token: ${{ secrets.GITHUB_TOKEN }}
       - name: Git Identity
         run: |
           git config --global user.name 'github-actions[bot]'
@@ -36,11 +50,6 @@ jobs:
           git remote set-url origin https://x-access-token:${GITHUB_TOKEN}@github.com/$GITHUB_REPOSITORY
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: Coveralls
-        uses: coverallsapp/github-action@master
-        with:
-          path-to-lcov: './.coverage/lcov.info'
-          github-token: ${{ secrets.GITHUB_TOKEN }}
       # Define ${CURRENT_VERSION}
       - name: Set Current Version
         run: |
