--- a/.github/workflows/canary-release.yml
+++ b/.github/workflows/canary-release.yml
@@ -55,6 +55,7 @@ jobs:
       - run: npm run test:ci
       - name: Analyze with SonarCloud
         uses: sonarsource/sonarcloud-github-action@master
+        with:
           args: >
             -Dsonar.verbose=true
             -Dsonar.exclusions=**/node_modules/**
