--- a/.github/workflows/canary-release.yml
+++ b/.github/workflows/canary-release.yml
@@ -1,4 +1,4 @@
-name: '/canary-release'
+name: Create Canary Release
 on:
   issue_comment:
     types: [ created ]
@@ -50,9 +50,9 @@ jobs:
           node-version: ${{ matrix.node }}
           cache: 'npm'
           registry-url: 'https://npm.pkg.github.com'
-      - run: npm ci
-      - run: npm run build
-      - run: npm run test:ci
+      - run: yarn ci
+      - run: yarn run build
+      - run: yarn run test:ci
       - name: Analyze with SonarCloud
         uses: sonarsource/sonarcloud-github-action@master
         env:
@@ -65,7 +65,7 @@ jobs:
             -Dsonar.verbose=true
             -Dsonar.exclusions=**/node_modules/**
             -Dsonar.test.inclusions=packages/**/*.spec.ts
-            -Dsonar.typescript.lcov.reportPaths=coverage/lcov.info
+            -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info
             -Dsonar.typescript.tsconfigPath=tsconfig.json
       # Send coverage report to Coveralls
       #- name: Coveralls
@@ -73,7 +73,7 @@ jobs:
       #  with:
       #    github-token: ${{ secrets.GITHUB_TOKEN }}
       - name: Publish
-        run: npm run release:canary
+        run: yarn run release:canary
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
