--- a/.github/workflows/create-release-pr.yml
+++ b/.github/workflows/create-release-pr.yml
@@ -30,9 +30,9 @@ jobs:
           node-version: ${{ matrix.node }}
           cache: 'npm'
           registry-url: 'https://npm.pkg.github.com'
-      - run: yarn ci
-      - run: yarn run build
-      - run: yarn run test:ci
+      - run: npm ci
+      - run: npm run build
+      - run: npm run test:ci
       - name: Analyze with SonarCloud
         uses: sonarsource/sonarcloud-github-action@master
         env:
