ci(WAT-1418) rollback tsconfig.json (#12)

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,4 +6,4 @@ sonar.exclusions=**/*.spec.js,**/*.spec.ts
 sonar.test.inclusions=**/*.spec.js,**/*.spec.ts
 sonar.javascript.coveragePlugin=lcov
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
-sonar.typescript.tsconfigPath=tsconfig.base.json
+sonar.typescript.tsconfigPath=core/testring/tsconfig.json
