--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,5 +5,5 @@ sonar.verbose=true
 sonar.exclusions=**/*.spec.js,**/*.spec.ts
 sonar.test.inclusions=**/*.spec.js,**/*.spec.ts
 sonar.javascript.coveragePlugin=lcov
-sonar.javascript.lcov.reportPaths=coverage/lcov.info
+sonar.javascript.lcov.reportPaths=.coverage/lcov.info
 sonar.typescript.tsconfigPath=core/testring/tsconfig.json
