--- a/.github/workflows/canary-release.yml
+++ b/.github/workflows/canary-release.yml
@@ -55,6 +55,7 @@ jobs:
           grep "github.com/ringcentral/testring" -rl . | xargs sed -i "s/ringcentral\/testring/${GITHUB_ACTOR}\/testring/g"
           sed -i "s/OWNER/${GITHUB_ACTOR}/g" .npmrc
           sed -i "s/\"name\": \"testring\"/\"name\": \"${GITHUB_ACTOR}\"/g" ./core/testring/package.json
+          sed -i "s/\"testring\"/\"${GITHUB_ACTOR}\"/g" ./packages/e2e-test-app/package.json
       - name: Setup Node.js ${{ matrix.node }}
         uses: actions/setup-node@v2
         with:
