--- a/.github/workflows/canary-release.yml
+++ b/.github/workflows/canary-release.yml
@@ -56,6 +56,7 @@ jobs:
           sed -i "s/OWNER/${GITHUB_ACTOR}/g" .npmrc
           sed -i "s/\"name\": \"testring\"/\"name\": \"${GITHUB_ACTOR}\"/g" ./core/testring/package.json
           sed -i "s/\"testring\"/\"${GITHUB_ACTOR}\"/g" ./packages/e2e-test-app/package.json
+          grep "'testring'" -rl . | xargs sed -i "s/'testring'/'danbao'/g"
       - name: Setup Node.js ${{ matrix.node }}
         uses: actions/setup-node@v2
         with:
