--- a/.github/workflows/canary-release.yml
+++ b/.github/workflows/canary-release.yml
@@ -51,18 +51,16 @@ jobs:
       # https://docs.github.com/en/actions/guides/publishing-nodejs-packages
       - name: Prepare Publish Packages to Github
         run: |
-          grep "@testring" -rl . | xargs sed -i "s/\@testring/\@${GITHUB_ACTOR}/g"
-          grep "github.com/ringcentral/testring" -rl . | xargs sed -i "s/ringcentral\/testring/${GITHUB_ACTOR}\/testring/g"
-          sed -i "s/OWNER/${GITHUB_ACTOR}/g" .npmrc
-          sed -i "s/\"name\": \"testring\"/\"name\": \"${GITHUB_ACTOR}\"/g" ./core/testring/package.json
-          sed -i "s/\"testring\"/\"${GITHUB_ACTOR}\"/g" ./packages/e2e-test-app/package.json
-          grep "'testring'" -rl . | xargs sed -i "s/'testring'/'danbao'/g"
+          grep "@testring" -rl . | xargs sed -i "s/\@testring/\@testring-dev/g"
+          grep "'testring'" -rl . | xargs sed -i "s/'testring'/'testring-dev'/g"
+          sed -i "s/\"name\": \"testring\"/\"name\": \"testring-dev\"/g" ./core/testring/package.json
+          sed -i "s/\"testring\"/\"testring-dev\"/g" ./packages/e2e-test-app/package.json
       - name: Setup Node.js ${{ matrix.node }}
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node }}
           cache: 'npm'
-          registry-url: 'https://npm.pkg.github.com'
+          registry-url: 'https://registry.npmjs.org'
       - run: npm ci
       - run: npm run build
       - run: npm run test:ci
@@ -80,7 +78,7 @@ jobs:
         run: yarn run release:canary
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN_DEV }}
       - uses: actions/github-script@v4
         with:
           github-token: ${{secrets.GITHUB_TOKEN}}
