--- a/lerna.json
+++ b/lerna.json
@@ -11,7 +11,7 @@
       "stream": true
     },
     "publish": {
-      "registry": "https://npm.pkg.github.com"
+      "registry": "https://registry.npmjs.org"
     }
   }
 }
