--- a/.github/workflows/canary-release.yml
+++ b/.github/workflows/canary-release.yml
@@ -87,5 +87,5 @@ jobs:
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: '🎉 Canary Release. You can install canary version via `npm install package@next`'
+              body: '🎉 Canary Release. You can install canary version via `npm install package@beta`'
             })
