--- a/core/testring/package.json
+++ b/core/testring/package.json
@@ -7,6 +7,9 @@
   "bin": {
     "testring": "./bin/testring.js"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/ringcentral/testring.git"
