--- a/core/child-process/package.json
+++ b/core/child-process/package.json
@@ -11,8 +11,8 @@
     "url": "https://github.com/ringcentral/testring.git"
   },
   "dependencies": {
-    "@testring/types": "^0.5.37",
-    "@testring/utils": "^0.5.37"
+    "@testring/types": "0.5.37",
+    "@testring/utils": "0.5.37"
   },
   "author": "RingCentral",
   "license": "MIT"
