--- a/core/cli-config/package.json
+++ b/core/cli-config/package.json
@@ -13,9 +13,9 @@
   "author": "RingCentral",
   "license": "MIT",
   "dependencies": {
-    "@testring/logger": "^0.5.37",
-    "@testring/types": "^0.5.37",
-    "@testring/utils": "^0.5.37",
+    "@testring/logger": "0.5.37",
+    "@testring/types": "0.5.37",
+    "@testring/utils": "0.5.37",
     "@types/deepmerge": "2.2.0",
     "@types/yargs": "15.0.13",
     "deepmerge": "4.2.2",
