--- a/core/dependencies-builder/package.json
+++ b/core/dependencies-builder/package.json
@@ -13,9 +13,9 @@
   "author": "RingCentral",
   "license": "MIT",
   "dependencies": {
-    "@testring/test-utils": "^0.5.37",
-    "@testring/types": "^0.5.37",
-    "@testring/utils": "^0.5.37",
+    "@testring/test-utils": "0.5.37",
+    "@testring/types": "0.5.37",
+    "@testring/utils": "0.5.37",
     "@types/babel-traverse": "6.25.5",
     "@types/babylon": "6.16.5",
     "babel-traverse": "6.26.0",
