--- a/core/fs-reader/package.json
+++ b/core/fs-reader/package.json
@@ -13,9 +13,9 @@
   "author": "RingCentral",
   "license": "MIT",
   "dependencies": {
-    "@testring/logger": "^0.5.37",
-    "@testring/pluggable-module": "^0.5.37",
-    "@testring/types": "^0.5.37",
+    "@testring/logger": "0.5.37",
+    "@testring/pluggable-module": "0.5.37",
+    "@testring/types": "0.5.37",
     "glob": "7.1.7"
   }
 }
