--- a/core/fs-store/package.json
+++ b/core/fs-store/package.json
@@ -18,13 +18,13 @@
   "author": "RingCentral",
   "license": "MIT",
   "dependencies": {
-    "@testring/cli-config": "^0.5.37",
-    "@testring/logger": "^0.5.37",
-    "@testring/pluggable-module": "^0.5.37",
-    "@testring/test-utils": "^0.5.37",
-    "@testring/transport": "^0.5.37",
-    "@testring/types": "^0.5.37",
-    "@testring/utils": "^0.5.37"
+    "@testring/cli-config": "0.5.37",
+    "@testring/logger": "0.5.37",
+    "@testring/pluggable-module": "0.5.37",
+    "@testring/test-utils": "0.5.37",
+    "@testring/transport": "0.5.37",
+    "@testring/types": "0.5.37",
+    "@testring/utils": "0.5.37"
   },
   "scripts": {
     "test": "mocha"
