--- a/core/logger/package.json
+++ b/core/logger/package.json
@@ -13,16 +13,16 @@
   "author": "RingCentral",
   "license": "MIT",
   "dependencies": {
-    "@testring/pluggable-module": "^0.5.37",
-    "@testring/transport": "^0.5.37",
-    "@testring/types": "^0.5.37",
-    "@testring/utils": "^0.5.37",
+    "@testring/pluggable-module": "0.5.37",
+    "@testring/transport": "0.5.37",
+    "@testring/types": "0.5.37",
+    "@testring/utils": "0.5.37",
     "@types/bytes": "3.1.1",
     "@types/node": "14.6.0",
     "bytes": "3.1.0",
     "chalk": "2.4.2"
   },
   "devDependencies": {
-    "@testring/test-utils": "^0.5.37"
+    "@testring/test-utils": "0.5.37"
   }
 }
