--- a/core/pluggable-module/package.json
+++ b/core/pluggable-module/package.json
@@ -13,6 +13,6 @@
   "author": "RingCentral",
   "license": "MIT",
   "dependencies": {
-    "@testring/types": "^0.5.37"
+    "@testring/types": "0.5.37"
   }
 }
