--- a/core/plugin-api/package.json
+++ b/core/plugin-api/package.json
@@ -13,10 +13,10 @@
   "author": "RingCentral",
   "license": "MIT",
   "dependencies": {
-    "@testring/fs-store": "^0.5.37",
-    "@testring/logger": "^0.5.37",
-    "@testring/types": "^0.5.37",
-    "@testring/utils": "^0.5.37",
+    "@testring/fs-store": "0.5.37",
+    "@testring/logger": "0.5.37",
+    "@testring/types": "0.5.37",
+    "@testring/utils": "0.5.37",
     "@types/node": "14.6.0"
   }
 }
