--- a/core/sandbox/package.json
+++ b/core/sandbox/package.json
@@ -13,9 +13,9 @@
   "author": "RingCentral",
   "license": "MIT",
   "dependencies": {
-    "@testring/api": "^0.5.37",
-    "@testring/test-utils": "^0.5.37",
-    "@testring/types": "^0.5.37",
-    "@testring/utils": "^0.5.37"
+    "@testring/api": "0.5.37",
+    "@testring/test-utils": "0.5.37",
+    "@testring/types": "0.5.37",
+    "@testring/utils": "0.5.37"
   }
 }
