--- a/core/testring/package.json
+++ b/core/testring/package.json
@@ -17,7 +17,7 @@
   "author": "RingCentral",
   "license": "MIT",
   "dependencies": {
-    "@testring/api": "^0.5.37",
-    "@testring/cli": "^0.5.37"
+    "@testring/api": "0.5.37",
+    "@testring/cli": "0.5.37"
   }
 }
