--- a/core/transport/package.json
+++ b/core/transport/package.json
@@ -13,9 +13,9 @@
   "author": "RingCentral",
   "license": "MIT",
   "dependencies": {
-    "@testring/child-process": "^0.5.37",
-    "@testring/types": "^0.5.37",
-    "@testring/utils": "^0.5.37",
+    "@testring/child-process": "0.5.37",
+    "@testring/types": "0.5.37",
+    "@testring/utils": "0.5.37",
     "@types/node": "14.6.0"
   }
 }
