--- a/core/utils/package.json
+++ b/core/utils/package.json
@@ -13,7 +13,7 @@
   "author": "RingCentral",
   "license": "MIT",
   "dependencies": {
-    "@testring/types": "^0.5.37",
+    "@testring/types": "0.5.37",
     "@types/bytes": "3.1.1",
     "@types/nanoid": "2.1.0",
     "@types/node": "14.6.0",
