--- a/packages/devtool-extension/package.json
+++ b/packages/devtool-extension/package.json
@@ -17,9 +17,9 @@
     "build:watch": "webpack --config webpack.config.ts --watch --devtool inline-source-map"
   },
   "devDependencies": {
-    "@testring/client-ws-transport": "^0.5.37",
-    "@testring/types": "^0.5.37",
-    "@testring/utils": "^0.5.37",
+    "@testring/client-ws-transport": "0.5.37",
+    "@testring/types": "0.5.37",
+    "@testring/utils": "0.5.37",
     "@types/chrome": "0.0.145",
     "@types/webpack": "4.4.22",
     "chrome-launcher": "0.10.5",
