--- a/packages/devtool-frontend/package.json
+++ b/packages/devtool-frontend/package.json
@@ -16,8 +16,8 @@
     "build:watch": "webpack --config webpack.config.ts --watch --devtool inline-source-map"
   },
   "devDependencies": {
-    "@testring/client-ws-transport": "^0.5.37",
-    "@testring/types": "^0.5.37",
+    "@testring/client-ws-transport": "0.5.37",
+    "@testring/types": "0.5.37",
     "@types/react": "16.7.18",
     "@types/react-dom": "16.0.11",
     "@types/webpack": "4.4.22",
