--- a/packages/http-api/package.json
+++ b/packages/http-api/package.json
@@ -13,12 +13,12 @@
   "author": "RingCentral",
   "license": "MIT",
   "dependencies": {
-    "@testring/logger": "^0.5.37",
-    "@testring/pluggable-module": "^0.5.37",
-    "@testring/test-utils": "^0.5.37",
-    "@testring/transport": "^0.5.37",
-    "@testring/types": "^0.5.37",
-    "@testring/utils": "^0.5.37",
+    "@testring/logger": "0.5.37",
+    "@testring/pluggable-module": "0.5.37",
+    "@testring/test-utils": "0.5.37",
+    "@testring/transport": "0.5.37",
+    "@testring/types": "0.5.37",
+    "@testring/utils": "0.5.37",
     "@types/node": "14.6.0",
     "@types/request-promise-native": "1.0.17",
     "@types/tough-cookie": "4.0.0",
