--- a/packages/plugin-babel/package.json
+++ b/packages/plugin-babel/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "@babel/core": "7.14.8",
     "@babel/plugin-transform-modules-commonjs": "7.14.5",
-    "@testring/plugin-api": "^0.5.37",
+    "@testring/plugin-api": "0.5.37",
     "@types/babel__core": "7.1.15"
   }
 }
