--- a/packages/plugin-selenium-driver/package.json
+++ b/packages/plugin-selenium-driver/package.json
@@ -13,11 +13,11 @@
   "author": "RingCentral",
   "license": "MIT",
   "dependencies": {
-    "@testring/child-process": "^0.5.37",
-    "@testring/devtool-extension": "^0.5.37",
-    "@testring/logger": "^0.5.37",
-    "@testring/plugin-api": "^0.5.37",
-    "@testring/types": "^0.5.37",
+    "@testring/child-process": "0.5.37",
+    "@testring/devtool-extension": "0.5.37",
+    "@testring/logger": "0.5.37",
+    "@testring/plugin-api": "0.5.37",
+    "@testring/types": "0.5.37",
     "@types/deepmerge": "2.2.0",
     "@types/node": "14.6.0",
     "chromedriver": "*",
