--- a/packages/web-application/package.json
+++ b/packages/web-application/package.json
@@ -13,19 +13,19 @@
   "author": "RingCentral",
   "license": "MIT",
   "dependencies": {
-    "@testring/async-assert": "^0.5.37",
-    "@testring/async-breakpoints": "^0.5.37",
-    "@testring/element-path": "^0.5.37",
-    "@testring/fs-store": "^0.5.37",
-    "@testring/logger": "^0.5.37",
-    "@testring/pluggable-module": "^0.5.37",
-    "@testring/transport": "^0.5.37",
-    "@testring/types": "^0.5.37",
-    "@testring/utils": "^0.5.37"
+    "@testring/async-assert": "0.5.37",
+    "@testring/async-breakpoints": "0.5.37",
+    "@testring/element-path": "0.5.37",
+    "@testring/fs-store": "0.5.37",
+    "@testring/logger": "0.5.37",
+    "@testring/pluggable-module": "0.5.37",
+    "@testring/transport": "0.5.37",
+    "@testring/types": "0.5.37",
+    "@testring/utils": "0.5.37"
   },
   "devDependencies": {
-    "@testring/child-process": "^0.5.37",
-    "@testring/test-utils": "^0.5.37",
+    "@testring/child-process": "0.5.37",
+    "@testring/test-utils": "0.5.37",
     "@types/node": "14.6.0"
   }
 }
