--- a/.github/workflows/canary-release.yml
+++ b/.github/workflows/canary-release.yml
@@ -56,8 +56,6 @@ jobs:
           grep "'testring'" -rl . | xargs sed -i "s/'testring'/'testring-dev'/g"
           sed -i "s/\"name\": \"testring\"/\"name\": \"testring-dev\"/g" ./core/testring/package.json
           sed -i "s/\"testring\"/\"testring-dev\"/g" ./packages/e2e-test-app/package.json
-          sed -i "s/sonar.projectKey=ringcentral_testring/sonar.projectKey=danbao_testring/g" ./sonar-project.properties
-          sed -i "s/sonar.organization=ringcentral/sonar.organization=danbao-github/g" ./sonar-project.properties
       - name: Setup Node.js ${{ matrix.node }}
         uses: actions/setup-node@v2
         with:
@@ -79,7 +77,7 @@ jobs:
       #  with:
       #    github-token: ${{ secrets.GITHUB_TOKEN }}
       - name: Publish
-        run: yarn run release:canary
+        run: npm run release:canary
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN_DEV }}
