--- a/.github/workflows/create-release-pr.yml
+++ b/.github/workflows/create-release-pr.yml
@@ -53,7 +53,7 @@ jobs:
           GITHUB_ACTOR: ${{ github.actor }}
       - name: Versionup commit
         run: |
-          yarn run versionup --yes
+          npm run versionup --yes
       - name: Set current CHANGELOG to output
         id: changelog
         shell: bash -ex {0}
