WAT-1317 base for new FS

--- a/packages/plugin-fs-storage/package.json
+++ b/packages/plugin-fs-storage/package.json
@@ -1,11 +1,7 @@
 {
-  "name": "@testring/fs-store",
+  "name": "@testring/plugin-fs-storage",
   "version": "0.5.37",
-  "description": "fs storage & operations service",
-  "keywords": [
-    "fs",
-    "storage"
-  ],
+  "description": "fs storage & default plugin",
   "main": "./dist/index.js",
   "types": "./src/index.ts",
   "repository": {
@@ -15,14 +11,12 @@
   "author": "RingCentral",
   "license": "MIT",
   "dependencies": {
-    "@testring/cli-config": "0.5.37",
-    "@testring/logger": "0.5.37",
-    "@testring/pluggable-module": "0.5.37",
     "@testring/plugin-api": "0.5.37",
-    "@testring/test-utils": "0.5.37",
-    "@testring/transport": "0.5.37",
     "@testring/types": "0.5.37",
     "@testring/utils": "0.5.37"
+  },
+  "devDependencies": {
+    "@testring/transport": "0.5.37"
   },
   "scripts": {
     "test": "mocha"
