Allow lerna for WAT* branch and add option --yes

--- a/lerna.json
+++ b/lerna.json
@@ -12,7 +12,8 @@
       "forcePublish": "*",
       "allowBranch": [
         "master",
-        "wat*"
+        "wat*",
+        "WAT"
       ]
     }
   },
